# dugout

./: .burrow.toml  .dugout.toml  .editorconfig  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  EDGE_CASE_TEST_SUMMARY.md  GPG_TESTS_SUMMARY.md  HOW_IT_WORKS.md  KMS.md  LAUNCH_POST.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  STYLE.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: demo.cast
benches/: crypto_bench.rs
docs/plans/: 2026-02-08-deployment-design.md  2026-02-08-deployment-identities.md  2026-02-08-kms-integration.md  2026-02-08-sync-command.md  2026-02-14-multi-vault.md
scripts/: .summary.md  CHEATSHEET.md  QUICK_START.md  README.md  RECORDING.md  demo.sh  install.ps1  install.sh  make-demo-gif.sh
src/: cli.rs  config.rs  crypto.rs  error.rs  import_export.rs  keystore.rs  lib.rs  main.rs  runner.rs  secrets.rs  team.rs
src/cli/: add.rs  admit.rs  args.rs  audit.rs  banner.rs  check.rs  commands.rs  completions.rs  dot.rs  env.rs  init.rs  knock.rs  lifecycle.rs  lock.rs  migrate_keychain.rs  mod.rs  output.rs  pending.rs  reset_keychain.rs  resolve.rs  rotate.rs  run.rs  secrets.rs  secrets_mgmt.rs  setup.rs  shell.rs  status.rs  sync.rs  team.rs  whoami.rs
src/cli/check/: audit.rs  mod.rs  status.rs
src/cli/secrets/: diff.rs  export.rs  import.rs  lock.rs  mod.rs  rotate.rs  unlock.rs
src/cli/team/: add.rs  list.rs  mod.rs  rm.rs
src/cli/vault/: list.rs  mod.rs
src/core/: config.rs  constants.rs  crypto.rs  detect.rs  env.rs  import_export.rs  keys.rs  keystore.rs  mod.rs  recipient.rs  secrets.rs  team.rs  types.rs  validation.rs  vault.rs
src/core/cipher/: age.rs  aws.rs  backend.rs  envelope.rs  gcp.rs  gpg.rs  kms.rs  mod.rs
src/core/cipher/age/: mod.rs
src/core/cipher/kms/: gcp.rs  mod.rs
src/core/cipher/provider/: mod.rs
src/core/crypto/: age_backend.rs  mod.rs
src/core/crypto/age/: mod.rs
src/core/domain/: audit.rs  diff.rs  env.rs  identity.rs  mod.rs  recipient.rs  secret.rs  sync.rs  vault_info.rs
src/core/keys/: mod.rs
src/core/store/: backend.rs  dugout.code-workspace  fs.rs  keychain.rs  mod.rs
src/core/vault/: audit.rs  lifecycle.rs  mod.rs  secrets.rs  team.rs
tests/: aws_kms.rs  check_cli_test.rs  cli.rs  cli_tests.rs  config.rs  config_tests.rs  coverage.rs  crypto_tests.rs  deploy.rs  domain.rs  domain_test.rs  edge_cases.rs  encoding.rs  error_cli_test.rs  gcp_kms.rs  gpg.rs  hardening.rs  identity.rs  import_export_tests.rs  init_cli_test.rs  integration_test.rs  kms.rs  lifecycle_cli_test.rs  logging.rs  multi_vault.rs  rotation.rs  run_cli_test.rs  secrets_cli_test.rs  shell_cli_test.rs  stress.rs  sync.rs  team_cli_test.rs  vault.rs  vault_test.rs  workflows.rs
tests/cli/: add.rs  check.rs  dot.rs  errors.rs  init.rs  knock.rs  run.rs  secrets.rs  setup.rs  team.rs
tests/harness/: mod.rs
tests/support/: assertions.rs  commands.rs  fixtures.rs  mod.rs  skip.rs
