[package]
name = "burrow"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Rob Dekovich <rob@altoal.com>"]
description = "An extremely fast secrets manager for developers, written in Rust"
license = "MIT"
repository = "https://github.com/usealtoal/burrow"
homepage = "https://github.com/usealtoal/burrow"
documentation = "https://github.com/usealtoal/burrow#readme"
readme = "README.md"
keywords = ["secrets", "encryption", "dotenv", "cli", "security"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
exclude = [
    ".github/",
    ".git/",
    ".burrow.toml",
    ".env",
    "tests/fixtures/",
]

[dependencies]
age = { version = "0.11", features = ["armor"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.15"
dirs = "6"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
whoami = "1"
zeroize = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
