[package]
name = "dugout"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Rob Dekovich <rob@altoal.com>"]
description = "A local secrets manager for development teams, written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/usealtoal/dugout"
homepage = "https://github.com/usealtoal/dugout"
documentation = "https://github.com/usealtoal/dugout#readme"
readme = "README.md"
keywords = ["secrets", "encryption", "dotenv", "cli", "security"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
exclude = [
    ".github/",
    ".git/",
    ".dugout.toml",
    ".env",
    "tests/fixtures/",
]

[features]
default = []
aws = ["dep:aws-sdk-kms", "dep:aws-config", "dep:tokio", "dep:base64"]
gcp = ["dep:base64"]
gpg = []

[dependencies]
age = { version = "0.11", features = ["armor"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
which = "7"
whoami = "1"
zeroize = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Optional dependencies for cipher backends
aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
