[package]
name = "dugout"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Rob Dekovich <rob@altoal.com>"]
description = "Git-native secrets manager for development teams, written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/usealtoal/dugout"
homepage = "https://github.com/usealtoal/dugout"
documentation = "https://github.com/usealtoal/dugout#readme"
readme = "README.md"
keywords = ["secrets", "encryption", "dotenv", "cli", "security"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
exclude = [
    ".github/",
    ".git/",
    ".dugout.toml",
    ".env",
    "tests/fixtures/",
]

[features]
default = []
aws = ["dep:aws-sdk-kms", "dep:aws-config", "dep:tokio", "dep:base64"]
gcp = ["dep:base64"]
test-kms = []   # mock KMS for hybrid integration tests
test-aws = []   # real AWS KMS (needs AWS_ACCESS_KEY_ID + DUGOUT_TEST_KMS_KEY)
test-gcp = []   # real GCP KMS (needs gcloud auth + DUGOUT_TEST_GCP_KEY)

[dependencies]
age = { version = "0.11", features = ["armor"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "color"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
which = "7"
whoami = "1"
zeroize = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Optional dependencies for cipher backends
aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
